/**
 * @author YuanXi
 */
public class LightOnCommand implements Command {
    @Override
    public void execute() {
        // TODO
    }

    @Override
    public void undo() {
        // TODO
    }
}